--- a/spring.html
+++ b/spring.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class= "scenic-views">
+<html class= "spring">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -9,24 +9,17 @@
   <body>
     <a href= "index.html"><img class = "logo" src= "seasons.svg" alt= "Four colorful images that represent each season." /></a>
     <h1>Seasons</h1>
-    <h2>Scenic Views</h2>
+    <h2>Spring</h2>
       
       <nav>
         <ul>
-          <li><a class = "current" href = "index.html"> Home </a></li>
+          <li><a href = "index.html"> Home </a></li>
           <li><a href = "winter.html"> Winter </a></li>
-          <li><a href = "spring.html"> Spring </a></li>
+          <li><a class = "current" href = "spring.html"> Spring </a></li>
           <li><a href = "summer.html"> Summer </a></li>
           <li><a href = "fall.html" > Fall </a></li>
         </ul>
       </nav>
-
-      <div class = "cards">
-        <a href= "winter.html"><img src= "winter.jpg" alt= "Snow covered landscape with a pretty sky." /></a>
-        <a href= "spring.html"><img src= "spring.jpg" alt= "Field of bright flowers." /></a>
-        <a href= "summer.html"><img src= "summer.jpg" alt= "Beautiful shoreline." /></a>
-        <a href= "fall.html"><img src= "fall.jpg" alt= "Pathway through trees with red and orange leaves." /></a>
-      </div>
 
       <div class = "textblock">
       <p>Lorem ipsum dolor sit amet consectetur adipiscing elit condimentum ullamcorper fusce, vehicula torquent cursus netus vitae vel consequat morbi conubia, eleifend blandit non class ridiculus ornare facilisi erat mauris. Sollicitudin eros condimentum euismod placerat tempus ut semper congue hac nascetur, metus nam diam dui ante ullamcorper curae nisl mollis.</p> 
@@ -40,8 +33,7 @@
       <p>Ut praesent sed netus aptent mi ligula, aliquam orci platea auctor himenaeos. Dapibus turpis bibendum vivamus cubilia aliquam porta inceptos quisque sem pharetra facilisis velit, phasellus maecenas potenti malesuada lobortis suspendisse dictumst risus nulla aenean.</p>
 
       <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sem at fames lacinia lobortis etiam aenean mus, morbi pretium faucibus facilisis tellus dui. Integer sed ligula sociis mus diam curabitur purus sagittis et, quam tristique fusce magna tellus interdum gravida nec, aenean conubia porta suscipit duis litora ut maecenas. Inceptos vehicula sagittis faucibus dui cursus ante leo arcu senectus litora penatibus vivamus massa, aliquet vestibulum pharetra molestie lacus aenean mi laoreet rhoncus augue bibendum.</p>
-
-      <p>four seasons by Alan Davis from the Noun Project</p>
       </div>
+
   </body>
 </html>
